src/scanner.c
/* Generated by re2c 0.13.5 on Wed Oct  2 07:36:46 2013 */
#line 1 "scanner.re2c"

#include "chuck.h"

#define    BSIZE    8192
#define YYCTYPE char
#define YYCURSOR cursor
#define YYLIMIT scanner->lim
#define YYMARKER scanner->ptr
#define YYFILL(n) {cursor = fill(scanner, cursor); }

int prepare_token_value(int tokValue, ChuckScanner *scanner)
{
    char bak = *scanner->cur;
    scanner->cur[0] = 0;
    if (tokValue == TOKEN_DOUBLE)
    {
        scanner->currToken.value.doubleValue = atof((const char *)scanner->tok);
    }
    else if (tokValue == TOKEN_LONG)
    {
        scanner->currToken.value.longValue = atol((const char *)scanner->tok);
    }
    else if (tokValue == TOKEN_IDENTIFIER)
    {
        scanner->currToken.value.stringValue = cu_string((const char *)scanner->tok);
    }
    else if (tokValue == TOKEN_STRING)
    {
        int len = (scanner->cur - 1) - (scanner->tok + 1);
        if (len < 0) len = 0;
        scanner->currToken.value.stringValue = cu_string_from_buffer((const char *)scanner->tok + 1, len);
    }
    scanner->cur[0] = bak;
    scanner->currToken.tokenType = tokValue;
    return tokValue;
}

#define RET(tokvalue) { scanner->cur = cursor; return prepare_token_value(tokvalue, scanner); }

ChuckScanner *chuck_scanner_create(CUIStream *instream)
{
    ChuckScanner *scanner = ZNEW(ChuckScanner);
    cu_setattr(scanner, instream, instream);
    return scanner;
}

void chuck_scanner_destroy(ChuckScanner *scanner)
{
    if (scanner->instream)
    {
        cu_stream_close(scanner->instream);
        cu_setattr(scanner, instream, NULL);
    }
    free(scanner);
}

uchar *fill(ChuckScanner *scanner, uchar *cursor){
    if(!scanner->eof) {
        uint cnt = scanner->tok - scanner->bot;
        if(cnt){
            memcpy(scanner->bot, scanner->tok, scanner->lim - scanner->tok);
            scanner->tok = scanner->bot;
            scanner->ptr -= cnt;
            cursor -= cnt;
            scanner->pos -= cnt;
            scanner->lim -= cnt;
        }
        if((scanner->top - scanner->lim) < BSIZE){
            uchar *buf = (uchar*) malloc(((scanner->lim - scanner->bot) + BSIZE)*sizeof(uchar));
            memcpy(buf, scanner->tok, scanner->lim - scanner->tok);
            scanner->tok = buf;
            scanner->ptr = &buf[scanner->ptr - scanner->bot];
            cursor = &buf[cursor - scanner->bot];
            scanner->pos = &buf[scanner->pos - scanner->bot];
            scanner->lim = &buf[scanner->lim - scanner->bot];
            scanner->top = &scanner->lim[BSIZE];
            free(scanner->bot);
            scanner->bot = buf;
        }
        if ((cnt = cu_istream_read(scanner->instream, (char*) scanner->lim, BSIZE)) != BSIZE){
            scanner->eof = &scanner->lim[cnt]; *(scanner->eof)++ = '\n';
        }
        scanner->lim += cnt;
    }
    return cursor;
}

int chuck_scanner_scan(ChuckScanner *scanner)
{
    uchar *cursor = scanner->cur;
std:
    scanner->tok = cursor;
#line 103 "scanner.re2c"



#line 100 "scanner.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 9) YYFILL(9);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case '\r':
	case ' ':	goto yy72;
	case '\n':	goto yy74;
	case '!':	goto yy44;
	case '"':	goto yy9;
	case '#':	goto yy30;
	case '$':	goto yy38;
	case '%':	goto yy36;
	case '&':	goto yy50;
	case '\'':	goto yy5;
	case '(':	goto yy56;
	case ')':	goto yy58;
	case '*':	goto yy34;
	case '+':	goto yy26;
	case ',':	goto yy32;
	case '-':	goto yy28;
	case '.':	goto yy7;
	case '/':	goto yy10;
	case '0':	goto yy2;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy4;
	case ':':	goto yy42;
	case ';':	goto yy40;
	case '<':	goto yy46;
	case '=':	goto yy43;
	case '>':	goto yy48;
	case '@':	goto yy70;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'o':
	case 'q':
	case 't':
	case 'v':
	case 'x':
	case 'y':
	case 'z':	goto yy25;
	case '[':	goto yy60;
	case ']':	goto yy62;
	case '^':	goto yy54;
	case 'b':	goto yy16;
	case 'c':	goto yy15;
	case 'd':	goto yy21;
	case 'e':	goto yy23;
	case 'f':	goto yy17;
	case 'i':	goto yy22;
	case 'n':	goto yy24;
	case 'p':	goto yy12;
	case 'r':	goto yy18;
	case 's':	goto yy14;
	case 'u':	goto yy20;
	case 'w':	goto yy19;
	case '{':	goto yy64;
	case '|':	goto yy52;
	case '}':	goto yy66;
	case '~':	goto yy68;
	default:	goto yy76;
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy267;
	case 'X':
	case 'x':	goto yy284;
	default:	goto yy283;
	}
yy3:
#line 106 "scanner.re2c"
	{ RET(TOKEN_LONG); }
#line 222 "scanner.c"
yy4:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy265;
yy5:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':
	case '\r':	goto yy6;
	default:	goto yy255;
	}
yy6:
#line 196 "scanner.re2c"
	{
        if (cursor >= scanner->eof) { RET(TOKEN_EOI); }
        else { RET(TOKEN_ERROR); }
    }
#line 241 "scanner.c"
yy7:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy246;
	default:	goto yy8;
	}
yy8:
#line 139 "scanner.re2c"
	{ RET(TOKEN_DOT); }
#line 260 "scanner.c"
yy9:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':
	case '\r':	goto yy6;
	default:	goto yy237;
	}
yy10:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '*':	goto yy232;
	case '/':	goto yy230;
	case '=':	goto yy229;
	default:	goto yy11;
	}
yy11:
#line 143 "scanner.re2c"
	{ RET(TOKEN_DIVIDE); }
#line 281 "scanner.c"
yy12:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'u':	goto yy223;
	default:	goto yy145;
	}
yy13:
#line 132 "scanner.re2c"
	{ RET(TOKEN_IDENTIFIER); }
#line 291 "scanner.c"
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy212;
	case 't':	goto yy213;
	default:	goto yy145;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy196;
	case 'o':	goto yy197;
	default:	goto yy145;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy191;
	default:	goto yy145;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy185;
	case 'u':	goto yy186;
	default:	goto yy145;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy174;
	default:	goto yy145;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy169;
	default:	goto yy145;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy164;
	default:	goto yy145;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy162;
	default:	goto yy145;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy160;
	default:	goto yy145;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy149;
	case 'x':	goto yy150;
	default:	goto yy145;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy146;
	default:	goto yy145;
	}
yy25:
	yych = *++YYCURSOR;
	goto yy145;
yy26:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '+':	goto yy140;
	case '=':	goto yy139;
	default:	goto yy27;
	}
yy27:
#line 140 "scanner.re2c"
	{ RET(TOKEN_PLUS); }
#line 376 "scanner.c"
yy28:
	yyaccept = 4;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '-':	goto yy135;
	case '=':	goto yy134;
	default:	goto yy29;
	}
yy29:
#line 141 "scanner.re2c"
	{ RET(TOKEN_MINUS); }
#line 388 "scanner.c"
yy30:
	++YYCURSOR;
#line 136 "scanner.re2c"
	{ RET(TOKEN_HASH); }
#line 393 "scanner.c"
yy32:
	++YYCURSOR;
#line 138 "scanner.re2c"
	{ RET(TOKEN_COMMA); }
#line 398 "scanner.c"
yy34:
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy131;
	default:	goto yy35;
	}
yy35:
#line 142 "scanner.re2c"
	{ RET(TOKEN_TIMES); }
#line 409 "scanner.c"
yy36:
	yyaccept = 6;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy128;
	default:	goto yy37;
	}
yy37:
#line 144 "scanner.re2c"
	{ RET(TOKEN_PERCENT); }
#line 420 "scanner.c"
yy38:
	++YYCURSOR;
#line 145 "scanner.re2c"
	{ RET(TOKEN_DOLLAR); }
#line 425 "scanner.c"
yy40:
	++YYCURSOR;
#line 147 "scanner.re2c"
	{ RET(TOKEN_SEMICOLON); }
#line 430 "scanner.c"
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy126;
	default:	goto yy6;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case '<':	goto yy120;
	case '=':	goto yy124;
	case '>':	goto yy122;
	case '^':	goto yy118;
	default:	goto yy6;
	}
yy44:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy114;
	default:	goto yy45;
	}
yy45:
#line 170 "scanner.re2c"
	{ RET(TOKEN_NOT); }
#line 455 "scanner.c"
yy46:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '<':	goto yy105;
	case '=':	goto yy107;
	default:	goto yy47;
	}
yy47:
#line 151 "scanner.re2c"
	{ RET(TOKEN_CMP_LT); }
#line 466 "scanner.c"
yy48:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy98;
	case '>':	goto yy96;
	default:	goto yy49;
	}
yy49:
#line 152 "scanner.re2c"
	{ RET(TOKEN_CMP_GT); }
#line 477 "scanner.c"
yy50:
	yyaccept = 7;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '&':	goto yy92;
	case '=':	goto yy91;
	default:	goto yy51;
	}
yy51:
#line 157 "scanner.re2c"
	{ RET(TOKEN_BIT_AND); }
#line 489 "scanner.c"
yy52:
	yyaccept = 8;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy86;
	case '|':	goto yy87;
	default:	goto yy53;
	}
yy53:
#line 158 "scanner.re2c"
	{ RET(TOKEN_BIT_OR); }
#line 501 "scanner.c"
yy54:
	yyaccept = 9;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy83;
	default:	goto yy55;
	}
yy55:
#line 159 "scanner.re2c"
	{ RET(TOKEN_BIT_XOR); }
#line 512 "scanner.c"
yy56:
	++YYCURSOR;
#line 164 "scanner.re2c"
	{ RET(TOKEN_LPAREN); }
#line 517 "scanner.c"
yy58:
	++YYCURSOR;
#line 165 "scanner.re2c"
	{ RET(TOKEN_RPAREN); }
#line 522 "scanner.c"
yy60:
	++YYCURSOR;
#line 166 "scanner.re2c"
	{ RET(TOKEN_LSQUARE); }
#line 527 "scanner.c"
yy62:
	++YYCURSOR;
#line 167 "scanner.re2c"
	{ RET(TOKEN_RSQUARE); }
#line 532 "scanner.c"
yy64:
	++YYCURSOR;
#line 168 "scanner.re2c"
	{ RET(TOKEN_LBRACE); }
#line 537 "scanner.c"
yy66:
	++YYCURSOR;
#line 169 "scanner.re2c"
	{ RET(TOKEN_RBRACE); }
#line 542 "scanner.c"
yy68:
	++YYCURSOR;
#line 171 "scanner.re2c"
	{ RET(TOKEN_TILDE); }
#line 547 "scanner.c"
yy70:
	yyaccept = 10;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy79;
	default:	goto yy71;
	}
yy71:
#line 188 "scanner.re2c"
	{ RET(TOKEN_AT); }
#line 558 "scanner.c"
yy72:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy78;
yy73:
#line 190 "scanner.re2c"
	{ goto std; }
#line 566 "scanner.c"
yy74:
	++YYCURSOR;
#line 191 "scanner.re2c"
	{
        if (cursor >= scanner->eof) { RET(TOKEN_EOI); }
        scanner->pos = cursor; scanner->line++;
        goto std;
    }
#line 575 "scanner.c"
yy76:
	yych = *++YYCURSOR;
	goto yy6;
yy77:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy78:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case '\r':
	case ' ':	goto yy77;
	default:	goto yy73;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy81;
	default:	goto yy80;
	}
yy80:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy3;
	case 1: 	goto yy6;
	case 2: 	goto yy11;
	case 3: 	goto yy27;
	case 4: 	goto yy29;
	case 5: 	goto yy35;
	case 6: 	goto yy37;
	case 7: 	goto yy51;
	case 8: 	goto yy53;
	case 9: 	goto yy55;
	case 10: 	goto yy71;
	case 11: 	goto yy97;
	case 12: 	goto yy106;
	case 13: 	goto yy248;
	}
yy81:
	++YYCURSOR;
#line 177 "scanner.re2c"
	{ RET(TOKEN_AT_CHUCK); }
#line 620 "scanner.c"
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy84;
	default:	goto yy80;
	}
yy84:
	++YYCURSOR;
#line 184 "scanner.re2c"
	{ RET(TOKEN_BIT_XOR_CHUCK); }
#line 631 "scanner.c"
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy89;
	default:	goto yy80;
	}
yy87:
	++YYCURSOR;
#line 156 "scanner.re2c"
	{ RET(TOKEN_LOG_OR); }
#line 642 "scanner.c"
yy89:
	++YYCURSOR;
#line 183 "scanner.re2c"
	{ RET(TOKEN_BIT_OR_CHUCK); }
#line 647 "scanner.c"
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy94;
	default:	goto yy80;
	}
yy92:
